--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: cp949_codec
 description: cp949 decoding/encoding
 version: 0.0.1
-homepage:
-authors:
-  - lety
+repository: https://github.com/letyletylety/cp949_codec
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
