--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,15 @@
 name: cp949_codec
 description: The best package for cp949 decoding/encoding. support null-safety, less memory comsumption. include examples and tests
-version: 0.1.1
+version: 1.0.0
 repository: https://github.com/letyletylety/cp949_codec
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+
+screenshots:
+  - description: 'Examples of decoding broken cp949 string'
+    path: 'example\screenshots\decodeString.png'
 
 dependencies:
 dev_dependencies:
   test:
-
