--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,18 @@
 name: cp949_codec
 description: The best package for cp949 decoding/encoding. support null-safety, less memory comsumption. include examples and tests
-version: 1.0.1
 repository: https://github.com/letyletylety/cp949_codec
+version: 1.0.2
 topics:
   - encoding
+  - decoding
   - korean
   - cp949
   - euc-kr
-
 environment:
   sdk: '>=2.12.0 <4.0.0'
-
 screenshots:
   - description: 'Examples of decoding broken cp949 string'
     path: 'screenshots/decodeString.png'
-
 dependencies:
 dev_dependencies:
   test:
